# esp32-doom

./: .gitignore  CMakeLists.txt  Makefile  doom1-cut.wad  flashwad.sh  partitions.csv  readme.rst  sdkconfig  sdkconfig.defaults
components/bootloader/src/main/: bootloader_start.c
components/driver/: Makefile  spi_lcd.c
components/driver/include/driver/: spi.h
components/driver/localinclude/soc/: spi_reg.h
components/prboom/: CMakeLists.txt  Makefile  component.mk  d_client.c  d_deh.c  d_items.c  d_main.c  d_server.c  dbopl.h  doomdef.c  f_finale.c  g_game.c  gl_main.c  gl_texture.c  i_audio.c  i_sound.c  info.c  lprintf.c  m_menu.c  m_misc.c  md5.c  mmus2mid.c  p_checksum.c  p_mobj.c  p_setup.c  r_bsp.c  r_data.c  r_demo.c  r_draw.c  r_filter.c  r_main.c  r_patch.c  r_plane.c  r_segs.c  r_things.c  s_sound.c  tables.c  v_video.c  w_mmap.c  w_wad.c  (+1 more)
components/prboom-esp32-compat/: CMakeLists.txt  Kconfig.projbuild  component.mk  gamepad.c  i_joy.c  i_main.c  i_network.c  i_system.c  i_video.c  psxcontroller.c  sndhw.c  spi_lcd.c  tsinput.c  tsinput.h
components/prboom-esp32-compat/include/: gamepad.h  psxcontroller.h  spi_lcd.h
components/prboom-imfs/: CMakeLists.txt  d_e1m1.imf  d_e1m2.imf  d_e1m3.imf  d_e1m4.imf  d_e1m5.imf  d_e1m6.imf  d_e1m7.imf  d_e1m8.imf  d_e1m9.imf  d_inter.imf  d_intro.imf  d_introa.imf  d_victor.imf  imfs.c  imfs.h  notes.txt
components/prboom-wad-tables/: CMakeLists.txt  GAMMATBL.c  Makefile  SINETABL.c  TANGTABL.c  TANTOANG.c  component.mk
components/prboom-wad-tables/include/: GAMMATBL.h  SINETABL.h  TANGTABL.h  TANTOANG.h
components/prboom/include/: config.h  d_items.h  doomdef.h  doomtype.h  i_sound.h  i_system.h  info.h  lprintf.h  m_argv.h  sndhw.h  tables.h
components/prboom/native/: Makefile  i_joy.c  i_main.c  i_sound.c  i_system.c  i_video.c
components/prboom/native/include/rom/: ets_sys.h
main/: app_main.c  idf_component.yml
