idf_component_register(SRCS "imfs.c"
                    INCLUDE_DIRS "."
					EMBED_FILES d_e1m1.imf d_e1m2.imf d_e1m3.imf d_e1m4.imf d_e1m5.imf 
                                d_e1m6.imf d_e1m7.imf d_e1m8.imf d_e1m9.imf d_inter.imf 
                                d_introa.imf d_intro.imf d_victor.imf
                    )
